--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash.debounce": "^4.0.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-page-visibility": "^7.0.0",
     "react-player": "^3.3.2",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.1.2"
