--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.3.1",
     "axios": "^1.11.0",
     "cookie-parser": "^1.4.7",
+    "fingerprintjs2": "^2.1.4",
     "lodash.debounce": "^4.0.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
