--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://puls-academy-backend-production.up.railway.app/api/$1"
+      "destination": "https://pulse-academy-backend.vercel.app/api/$1"
     },
     {
       "source": "/(.*)",
